flink-studio/deployment/manifests/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flink-studio
  labels:
    name: flink-studio
    app.kubernetes.io/name: flink-studio
    app.kubernetes.io/component: namespace
