flink-studio/deployment/manifests/03-flink-session-cluster-aks.yaml
apiVersion: v1
kind: Service
metadata:
  name: flink-session-cluster-web
  namespace: flink-studio
  labels:
    app.kubernetes.io/name: flink-session-cluster
    app.kubernetes.io/component: web-service
spec:
  selector:
    app.kubernetes.io/name: flink-session-cluster
    app.kubernetes.io/component: jobmanager
  ports:
  - name: web
    port: 80
    targetPort: 8081
    protocol: TCP
  type: ClusterIP
