flink-studio/deployment/manifests/03-flink-session-cluster-gcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: flink-session-cluster
  namespace: flink-studio
  labels:
    app.kubernetes.io/name: flink-session-cluster
    app.kubernetes.io/component: web-service
spec:
  selector:
    app: flink-session-cluster
    component: jobmanager
  ports:
    - name: web
      port: 80
      targetPort: 8081
      protocol: TCP
  type: ClusterIP
